--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>This is my first website</h1>
+    <p>I need to learn git so soon</p>
     <h1>look mama, I am using github</h1>
 </body>
 </html>
